2025-11-12  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: 54026: Completion/Debian/Command/_uscan:
	update uscan options

	* Christopher Bock: 54025: Completion/Debian/Command/_apt:
	complete apt-mark minimize-manual

	* Lawrence Velázquez: 53775: Doc/Zsh/builtins.yo,
	Doc/Zsh/compwid.yo, Doc/Zsh/mod_ksh93.yo, Doc/Zsh/mod_private.yo,
	Doc/Zsh/mod_random.yo, Doc/Zsh/options.yo, Doc/Zsh/zle.yo, README:
	Fix some documentation typos

	* 54071: Completion/Zsh/Type/_ps1234: fix prompt colour completion

	* 54043, 54055 (tweaked to use "reset" as suggested by Mikael):
	Doc/Zsh/zle.yo, Src/prompt.c, Src/Modules/hlgroup.c,
	Src/Modules/watch.c, Src/Zle/complist.c, Src/Zle/zle.h,
	Src/Zle/zle_main.c, Src/Zle/zle_refresh.c, Src/Zle/zle_tricky.c:
	allow highlighing attributes to be turned back off

	* 54037: Src/Zle/zle_refresh.c: fix to highlight layers where
	special is assigned a low layer

	* 54036: Src/prompt.c, Src/Zle/complist.c, Src/Zle/zle_refresh.c:
	fixes related to prompt attribute leftovers

2025-11-10  Bart Schaefer  <schaefer@zsh.org>

	* 54064: Src/params.c, Test/K01nameref.ztst: avoid crash on named
	references to argv/ARGC, improve syntax checks in valid_nameref().
	Leaves some edgecase issues unresolved (see tests).

2025-11-10  Oliver Kiddle  <opk@zsh.org>

	* 53402, 54042: Src/Zle/termquery.c, Src/Zle/zle_main.c,
	Doc/Zsh/params.yo, Doc/Zsh/zle.yo: make timeout for terminal queries
	configurable via a .term.querywait variable, clarify documentation
	and include fewer of the new extensions by default

	* 53438: Doc/Zsh/params.yo, Doc/Zsh/zle.yo, Src/Zle/termquery.c,
	Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/Zle/zle_vi.c, Src/init.c,
	Src/zsh.h: support for changing terminal cursor shape and colour

	* 53404: Doc/Zsh/params.yo, Src/Zle/termquery.c, Src/Zle/zle_main.c,
	Src/builtin.c, Src/init.c, Src/input.c, Src/loop.c, Src/prompt.c,
	Src/subst.c, Src/utils.c, Src/zsh.h, Test/X04zlehighlight.ztst,